<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_messages_title"
        android:key="pref_messages">
        <SwitchPreference
            android:defaultValue="true"
            android:key="enable_messages"
            android:title="@string/pref_title_enable_messages" />

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:dependency="enable_messages"
            android:defaultValue="@string/pref_default_message_format"
            android:key="message_format"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_message_format" />

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
<!--
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:key="example_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_add_friends_to_messages" />
-->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_speech_title"
        android:key="pref_speech">
        <SwitchPreference
            android:defaultValue="true"
            android:key="enable_speech"
            android:title="@string/pref_title_enable_speech" />

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:dependency="enable_speech"
            android:defaultValue="@string/pref_default_speech_format"
            android:key="speech_format"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_speech_format" />

        <ListPreference
            android:dependency="enable_speech"
            android:key="speech_language"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_speech_language" />

    </PreferenceCategory>

</PreferenceScreen>
